# myning

./: .gitignore  CLAUDE.md  Makefile  README.md  REVIEW.md  main.py  pyproject.toml  requirements-dev.in
.github/workflows/: ci.yml
myning/: changelog.yaml  config.py  config.yaml  mines.yaml
myning/api/: __init__.py
myning/chapters/: __init__.py  armory.py  barracks.py  base_store.py  bestiary.py  blacksmith.py  compendium.py  graveyard.py  journal.py  main_menu.py  settings.py  stats.py  store.py  tutorial.py
myning/chapters/garden/: garden_table.py  manage.py
myning/chapters/mine/: __init__.py  actions.py  screen.py
myning/migrations/: __init__.py  bestiary_backfill.py  sqlite_migration.py
myning/objects/: army.py  blacksmith_item.py  character.py  game.py  garden.py  graveyard.py  inventory.py  item.py  macguffin.py  mine.py  object.py  plant.py  player.py  research_facility.py  settings.py  singleton.py  stats.py  trip.py
myning/tui/: app.css  app.py  header.py  input.py
myning/tui/chapter/: __init__.py  question.py
myning/utilities/: boss_art.py  boss_scaling.py  fib.py  file_manager.py  formatter.py  generators.py  git.py  species_rarity.py  ui.py
tests/: conftest.py  utilities.py
tests/chapters/: test_barracks.py  test_bestiary.py  test_boss.py  test_healer.py  test_main_menu.py  test_mine.py  test_store.py
tests/utilities/: test_boss_scaling.py
